# pano-ssl-dense

./: .gitignore  CLAUDE.md  README.md  Whatsdiff.md  anyres_e2p.py  data.py  encoder.py  fusion.py  geometry.py  losses.py  mp3d.py  pretrain.py  pyproject.toml  runlog.py
configs/: pool_pin_20260702.tsv
docs/: 2,4_REPRESENTATION_QUALITY.md  CAN_SSL_RAISE_ACCURACY.md  COHERENCE_DELIVERABLE.md  CONSISTENCY_AND_RICHNESS_LIT.md  DATASETS.md  EROSION_AND_DISTORTION_LIT.ko.md  EROSION_AND_DISTORTION_LIT.md  FAILURE_ANALYSIS.md  HANDOFF_BRIEF.md  INITIAL_DESIGN.md  INVVAR_FUSION_LOG.md  MOGE_PARALLAX_LOG.md  PANO_ADAPT_RECIPE_GATE.md  PANO_MIM_DESIGN.md  PANO_WHEREWHAT_SPEC.md  PWW_EXPERIMENT_LOG.md  RESEARCH_LOG.md  RESULTS.md  SEMANTIC_IDENTITY_SSL.md  SOTA_BENCHMARK_PLAN.md  SPHERE_COMPLETION_LOG.md  SSL_ACCURACY_DESIGN.md  SSL_SUCCESS_CASES_LIT.md
scripts/: adaptive_field.py  adaptive_field_deform.py  band_coverage.py  bench_common.py  coherence_pointmap.py  compare_coverage.py  coverage_common.py  depth_headtohead.py  depth_s2d3d_bench.py  depth_s2d3d_finetune.py  derisk_tc3.py  diag_axis12.py  diag_consistency_metrics.py  diag_context_headroom.py  diag_cos.py  diag_disagreement_error.py  diag_fan_match.py  diag_fusion_bakeoff.py  diag_invvar_fusion.py  diag_moge_p0.py  diag_obliquity_headroom.py  diag_overlap_match.py  diag_p1_floor.py  diag_position_headroom.py  diag_seam.py  diag_semantic_headroom.py  diag_tiling_pareto.py  encoder_gate.py  eval_ssl.py  fair_indoor.py  field_refine_probe.py  field_res_sweep.py  field_size_sweep.py  fine_tune_seg.py  finetune_s2d3d.py  (+65 more)
(+14 files in other folders)
