[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pano-ssl-dense"
version = "0.1.0"
description = "Self-supervised dense panorama understanding experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "transformers",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "ruff",
]
panorama = [
    "py360convert",
    "opencv-python",
]

[tool.setuptools]
py-modules = ["anyres_e2p"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["anyres_e2p"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
